--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Expensify-App</title>
         <link rel="icon" type="image/png" href="/images/Indecision.png"/>
+        <link rel="stylesheet" type="text/css" href="./main.css"/>
     </head>
     <body>
         <div id="app"></div>
